<resources>
    <string name="app_name">Image To PDF</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="file_manager">File Manager</string>
    <string name="generated_pdf">Generated PDF</string>

    <string name="vw_rationale_storage">Need Reading Storage Permission for Picking Files</string>

    <string name="total_image"><![CDATA[<b>%1$d</b> Pics]]></string>
    <string name="total_images"><![CDATA[<b>%1$d</b> Pics]]></string>
    <string name="selected_images">Selected Images</string>
    <string name="convert_to_pdf_settings">Convert to PDF Settings</string>
    <string name="file_name">File Name</string>
    <string name="compress_images">Compress Images</string>
    <string name="insert_white_margins">Insert White Margins?</string>
    <string name="protect_with_password">Protect with password?</string>
    <string name="password">Password</string>
    <string name="orientation">Orientation</string>
    <string name="cancel">Cancel</string>
    <string name="converting_to_pdf">Converting To PDF</string>
    <string name="please_wait">Please wait we are converting...</string>
    <string name="converted_successfully">Converted Successfully</string>
    <string name="share">Share</string>
    <string name="open_with">Open with</string>

    <string name="name_asc">Name Ascending</string>
    <string name="name_desc">Name Descending</string>
    <string name="date_asc">Date Ascending</string>
    <string name="date_desc">Date Descending</string>
    <string name="size_asc">Size Ascending</string>
    <string name="size_desc">Size Descending</string>
    <string name="rename">Rename</string>
    <string name="delete_from_device">Delete from Device</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="text_to_pdf">Text To PDF</string>
    <string name="pdf_zone">PDF  ZONE</string>
    <string name="text_to_pdf_conversion">Text To Pdf Conversion</string>
    <string name="enter_your_text">Enter Your Text</string>
    <string name="enter_your_text_here"> <font font-family="poppins_light">Enter Your Text Here</font> </string>
    <string name="please_go_playstore_and_install_pdf_reader_for_that_action_press_go_button_other_wise_select_cancel">Please Go Playstore and install pdf reader for that action press GO Button Other Wise select cancel!!!!</string>
    <string name="cancel_t">Cancel \t !!</string>
    <string name="go">Go</string>
    <string name="image_to_pdf"><font font-family="poppins_light">Image To PDF</font></string>

</resources>