<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClick"
            type="com.daily.image.pdf.imagetopdfconvert.activity.GeneratedPdfActivity.MyClickHandlers" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.GeneratedPdfActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:id="@+id/rlTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60sdp"
                android:background="@color/purple_700">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgBack"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:onClick="@{onClick::onBack}"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_back" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@+id/imgSorting"
                    android:layout_toRightOf="@+id/imgBack"
                    android:text="@string/generated_pdf"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgSorting"
                    android:layout_width="@dimen/_60sdp"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:onClick="@{onClick::onSortingClick}"
                    android:scaleType="center"
                    app:srcCompat="@drawable/ic_sorting" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/backRl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rlTop"
                android:onClick="@{onClick::onSortingClick}"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cvSorting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlTop"
                android:layout_alignParentRight="true"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_minus10sdp"
                android:orientation="vertical"
                android:visibility="gone"
                app:cardCornerRadius="@dimen/_15sdp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/_15sdp"
                    android:orientation="vertical"
                    android:paddingHorizontal="@dimen/_12sdp"
                    android:paddingVertical="@dimen/_7sdp">

                    <TextView
                        android:id="@+id/name_asc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_13sdp"
                        android:onClick="@{onClick::onNameAscending}"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:text="@string/name_asc"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/name_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:onClick="@{onClick::onNameDescending}"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:text="@string/name_desc"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_12sdp" />

                    <TextView
                        android:id="@+id/date_asc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:onClick="@{onClick::onDateAscending}"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:text="@string/date_asc"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/date_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:onClick="@{onClick::onDateDescending}"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:text="@string/date_desc"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/size_asc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:onClick="@{onClick::onSizeAscending}"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:text="@string/size_asc"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <TextView
                        android:id="@+id/size_desc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12sdp"
                        android:layout_marginBottom="@dimen/_10sdp"
                        android:onClick="@{onClick::onSizeDescending}"
                        android:paddingHorizontal="@dimen/_10sdp"
                        android:text="@string/size_desc"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvPdf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rlTop"
                android:layout_marginVertical="@dimen/_10sdp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgNoData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                app:srcCompat="@drawable/ic_no_data" />

        </RelativeLayout>

        <View
            android:id="@+id/imgView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#A2000000"
            android:visibility="gone" />

        <RelativeLayout
            android:id="@+id/rlBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/up_curve"
            app:behavior_hideable="true"
            app:behavior_peekHeight="0dp"
            app:elevation="@dimen/_7sdp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

            <RelativeLayout
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_15sdp"
                android:background="@drawable/ic_line" />

            <RelativeLayout
                android:id="@+id/rlFile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_below="@+id/view"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:layout_marginVertical="@dimen/_7sdp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgArt"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="match_parent"
                    app:riv_corner_radius="@dimen/_7sdp"
                    app:srcCompat="@drawable/ic_pdf" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_toRightOf="@+id/imgArt">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvNameBottom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:text="@string/app_name"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_13sdp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tvSizeDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tvNameBottom"
                        android:text="09 Aug 2021 , 556 KB"
                        android:textColor="@color/light_text_color"
                        android:textSize="@dimen/_11sdp" />

                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlFile"
                android:layout_marginHorizontal="@dimen/_17sdp"
                android:layout_marginTop="@dimen/_17sdp"
                android:orientation="vertical"
                android:paddingBottom="@dimen/_10sdp">

                <RelativeLayout
                    android:id="@+id/rlShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgShare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_share1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_toRightOf="@+id/imgShare"
                        android:text="@string/share"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlRename"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_12sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgRename"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_rename" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_toRightOf="@+id/imgRename"
                        android:text="@string/rename"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15sdp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlDelete"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/_12sdp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgDelete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        app:srcCompat="@drawable/ic_delete1" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/_15sdp"
                        android:layout_toRightOf="@+id/imgDelete"
                        android:text="@string/delete_from_device"
                        android:textColor="@color/teal_700"
                        android:textSize="@dimen/_15sdp" />

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>