<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClick"
            type="com.daily.image.pdf.imagetopdfconvert.activity.MainActivity.MyClickHandlers" />
    </data>

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:id="@+id/drawer_layout"
        android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.MainActivity">


        <RelativeLayout
            android:id="@+id/rlTop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_60sdp"
            android:background="@color/purple_700">

            <ImageView
                android:id="@+id/btnopendrawer"
                android:layout_width="40dp"
                android:layout_marginLeft="15dp"
                android:layout_height="match_parent"
                app:srcCompat="@drawable/ic_open_drawer"
                app:tint="@color/white" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/_15sdp"
                android:paddingLeft="@dimen/_15sdp"
                android:text="@string/app_name"
                android:layout_toRightOf="@+id/btnopendrawer"
                android:textColor="@color/white"
                android:textSize="@dimen/_16sdp"
                tools:ignore="RtlSymmetry" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imgBottom"
            android:layout_below="@+id/rlTop"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_7sdp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <LinearLayout
                    android:id="@+id/llCamera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:onClick="@{onClick::onCamera}"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_camera" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="center_horizontal"
                        android:text="@string/camera"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llGallery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:onClick="@{onClick::onGallery}"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_gallery" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="center_horizontal"
                        android:text="@string/gallery"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:orientation="horizontal"
                android:weightSum="2.0">

                <LinearLayout
                    android:id="@+id/llFileManager"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:onClick="@{onClick::onFileManager}"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_file_manager" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="center_horizontal"
                        android:text="@string/file_manager"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/llGPdf"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:onClick="@{onClick::onGeneratedPDF}"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:srcCompat="@drawable/ic_generate_pdf" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:gravity="center_horizontal"
                        android:text="@string/generated_pdf"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_14sdp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgBottom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/ic_home_vector" />

    </RelativeLayout>


        <com.google.android.material.navigation.NavigationView
            android:id="@+id/side_view"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            app:headerLayout="@layout/header"
            app:menu="@menu/side_menu">

        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>
</layout>