<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#4C000000"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="fill_parent"
        android:layout_height="@dimen/_350sdp"
        android:layout_margin="10.0dip"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="@dimen/_15sdp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/_20sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_2sdp"
                android:fontFamily="@font/poppins_medium"
                android:paddingHorizontal="@dimen/_15sdp"
                android:text="No Activity is Found For Your Pdf Reading!!!!"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_240sdp"
                android:paddingHorizontal="@dimen/_15sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:scrollbarSize="0dp"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_margin="@dimen/_10sdp"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:text="Possible Solution"
                        android:textSize="@dimen/_14sdp" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"

                        android:layout_margin="@dimen/_10sdp"
                        android:padding="@dimen/_5sdp"
                        card_view:cardBackgroundColor="#28AAAAAA"
                        card_view:strokeColor="@color/teal_200"
                        card_view:strokeWidth="@dimen/_2sdp"
                        card_view:cardCornerRadius="@dimen/_5sdp"

                        card_view:cardElevation="@dimen/_5sdp"

                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="match_parent"
                            android:layout_margin="@dimen/_5sdp"
                            android:layout_height="match_parent"
                            android:fontFamily="@font/poppins_light"
                           android:textSize="@dimen/_15sdp"

                            android:text="@string/please_go_playstore_and_install_pdf_reader_for_that_action_press_go_button_other_wise_select_cancel"/>
                    </com.google.android.material.card.MaterialCardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="0.0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:background="@color/teal_200"
                            android:elevation="@dimen/_5sdp"
                            android:text="@string/cancel_t"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppins_medium"
                            android:id="@+id/btn_dialog_cancel"
                            android:shadowColor="@color/teal_700"/>
                        <androidx.appcompat.widget.AppCompatButton
                            android:layout_width="0.0dp"
                            android:layout_weight="1"
                            android:layout_marginStart="@dimen/_10sdp"
                            android:layout_marginEnd="@dimen/_10sdp"
                            android:layout_height="wrap_content"
                            android:background="@color/teal_700"
                            android:elevation="@dimen/_5sdp"
                            android:text="@string/go"
                            android:textColor="@color/white"
                            android:fontFamily="@font/poppins_medium"
                            android:id="@+id/btn_dialog_go"
                            android:shadowColor="@color/teal_700"/>
                    </LinearLayout>
                </LinearLayout>

            </ScrollView>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
